updates to libserial page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         libserial -
         <a href="http://roadnarrows.com/distro/" style="padding-left:5px">RN DISTRO<img src="images/go_back_icon.png" width="16px"></img></a>
         </h1>
-        <p>RoadNarrows Robotics common library</p>
+        <p>RoadNarrows Robotics serial communication library</p>
 
         <p class="view"><a href="http://roadnarrows.com/distro/libserial/pkg/latest/srcdoc" target="_blank">View API and Source Documentation</a></p>
 
