tailored to libserial

--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
 
 <h2><a name="description" class="anchor" href="#description"><span class="octicon octicon-link"></span></a>Description:</h2>
 
-<p><strong><em>libserial</em></strong> provides an extensive set of utilities (e.g. logging, and options parsing) that unify all RoadNarrows software packages.</p>
-
-<p>Check out examples in the <a href="http://www.roadnarrows.com/distro/libserial/pkg/latest/srcdoc/pages.html" target="_blank">Source Documentation</a></p>
+<p><strong><em>libserial</em></strong> provides a robust, generic API for interfacing with serial devices and communication buses.
 
 <hr>
 
@@ -59,6 +57,8 @@ sudo apt-get update <span class="p">&amp;&amp;</span> sudo apt-get install libse
 
 <h3>
 <a name="from-source-using-cmake" class="anchor" href="#from-source-using-cmake"><span class="octicon octicon-link"></span></a>From source (using CMake)</h3>
+
+<p>Dependencies: <a href="http://roadnarrows.com/distro/librnr">librnr</a></p>
 
 <div class="highlight highlight-bash"><pre>git clone http://github.com/roadnarrows-robotics/libserial
 <span class="nb">cd </span>libserial
