added github icon

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header>
         <h1 style="margin-left:-8px">
        <a href="http://roadnarrows.com"><img src="http://www.roadnarrows.com/img/navbar/RNLogo.png" width="100px" style="margin-left:-100px; margin-bottom:-70px"></img></a>
-        <a href="http://roadnarrows.com/distro/" >RN DISTRO<img src="images/distro_home.png" width="16px" style="margin-left:5px"></img></a>
+        <a href="http://roadnarrows.com/distro/">RN DISTRO<img src="images/distro_home.png" width="16px" style="margin-left:5px"></img></a> <a href="http://github.com/roadnarrows-robotics"><img src="images/octicon-16.png"</img></a>
         </h1>
         <p>RoadNarrows Robotics serial communication library</p>
 
