minor style/layout changes

--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
         </h1>
         <p>RoadNarrows Robotics serial communication library</p>
 
-        <p class="view"><a href="http://roadnarrows.com/distro/libserial/pkg/latest/srcdoc" target="_blank">View API and Source Documentation</a></p>
 
-
+<strong>Source Code:</strong>
         <ul>
           <li><a href="https://github.com/roadnarrows-robotics/libserial/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/roadnarrows-robotics/libserial/tarball/master">Download <strong>TAR Ball</strong></a></li>
@@ -32,12 +31,9 @@
 
       <p class="view">
         <a href="http://colorado.roadnarrows.com:40105/job/libserial/"><img src="http://colorado.roadnarrows.com:40105/buildStatus/icon?job=libserial" alt="Build Status" style="margin-bottom:-2px"></a>
-        <a href="http://roadnarrows.com/distro/libserial/pkg/" style="padding-left:20px">ARCHIVE</a>
+        <a href="http://roadnarrows.com/distro/libserial/pkg/" style="padding-left:20px"><strong>ARCHIVE</strong></a>
       </p>
-      SEE ALSO:<br/>
-      <p><a href="http://roadnarrows.com/distro/librnr" style="padding-left:20px">
-        <strong>LIBRNR</strong>
-      </a></p>
+
 
       <p>
         <strong>
@@ -56,8 +52,11 @@
 
 <p><strong><em>libserial</em></strong> provides a robust, generic API for interfacing with RS-232 serial devices.</p>
 
-<p><strong>Source documentation: </strong><a href="http://roadnarrows.com/distro/libserial/pkg/latest/srcdoc">libserial-srcdoc</a></p>
-<p><strong>RN Dependencies:</strong> <a href="http://roadnarrows.com/distro/librnr">librnr</a></p>
+<hr/>
+
+<p><strong>Source documentation: </strong><a href="http://roadnarrows.com/distro/libserial/pkg/latest/srcdoc"><strong>libserial-srcdoc</strong></a></p>
+<p><strong>RN Dependencies:</strong> <a href="http://roadnarrows.com/distro/librnr"><strong>librnr</strong></a></p>
+<p><strong>See also:</strong> <a href="http://roadnarrows.com/distro/librnr"> <strong>librnr</strong> </a></p>
 <hr>
 
 <h2>
@@ -84,7 +83,7 @@ make <span class="p">&amp;&amp;</span> make install
 </pre></div>
       </section>
       <footer>
-        <p>Maintained by: <a href="https://github.com/roadnarrows-robotics">roadnarrows-robotics</a> <img src="http://www.roadnarrows.com/img/navbar/RNLogo.png" width="18px" style="margin-bottom:-3px"></img></p>
+        <p>Maintained by: <a href="https://github.com/roadnarrows-robotics"><strong>roadnarrows-robotics</strong></a> <img src="http://www.roadnarrows.com/img/navbar/RNLogo.png" width="18px" style="margin-bottom:-3px"></img></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
